<resources>
    <string name="app_name">ft_hangouts</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="default_language">en</string>
    <string name="contact_edited">Contact edited</string>
    <string name="error_prenom">Name can\'t be empty</string>
    <string name="error_nom">Surname can\'t be empty</string>
    <string name="error_numero">Phone number can\'t be empty</string>

    <string name="prenom">Name</string>
    <string name="nom">Surname</string>
    <string name="numero">Phone number</string>

    <string name="prenom_hint">Name *</string>
    <string name="nom_hint">Surname *</string>
    <string name="numero_hint">Phone number *</string>
    <string name="adding_contact">Adding a contact</string>
    <string name="address">Address</string>
    <string name="birthday">Birthday</string>
    <string name="add_a_contact">Add a contact</string>
    <string name="contact_details">Contact details</string>
    <string name="num_indic">"Phone number: "</string>
    <string name="anniv_indic">"Birthday: "</string>
    <string name="address_indic">"Address: "</string>
    <string name="not_suppliedf">Not supplied</string>
    <string name="not_suppliedm">Not supplied</string>
    <string name="call">Call</string>
    <string name="send_a_message">Send a message</string>
    <string name="delete">Delete</string>
    <string name="edit_contact">Edit contact</string>
    <string name="enter_message">Enter message</string>
    <string name="send_caps">SEND</string>

</resources>