<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/coor_add">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="15dp"
                android:id="@+id/avatar_page_contact" />
            <android.support.design.widget.TextInputLayout
                app:errorEnabled="true"
                android:id="@+id/edit_nom_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/avatar_page_contact"
                android:layout_alignTop="@id/avatar_page_contact"
                android:layout_marginRight="10dp">

                <EditText
                    android:id="@+id/edit_nom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nom"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                app:errorEnabled="true"
                android:id="@+id/edit_prenom_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/avatar_page_contact"
                android:layout_alignBottom="@id/avatar_page_contact"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp">

                <EditText
                    android:id="@+id/edit_prenom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prenom"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                app:errorEnabled="true"
                android:id="@+id/edit_numero_layout"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/avatar_page_contact"
                android:layout_centerHorizontal="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableRight="@drawable/ic_phone_black_24dp"
                    android:hint="@string/numero"
                    android:id="@+id/edit_numero"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                app:errorEnabled="true"
                android:id="@+id/edit_domicile_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_numero_layout"
                android:layout_centerHorizontal="true">
                <EditText
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/address"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:id="@+id/edit_domicile" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                app:errorEnabled="true"
                android:id="@+id/edit_anniversaire_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_domicile_layout"
                android:layout_centerHorizontal="true">
                <EditText
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/birthday"
                    android:imeOptions="actionDone"
                    android:id="@+id/edit_anniversaire" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:onClick="edit_contact"
        app:elevation="8dp"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_check_black_24dp"
        android:tint="@android:color/white"/>
</android.support.design.widget.CoordinatorLayout>
